--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
         <module>saturn-console-api</module>
         <module>saturn-console-web</module>
         <module>saturn-console</module>
-        <module>saturn-it</module>
+        <!--<module>saturn-it</module>-->
     </modules>
 
 	<properties>
